# DataCenterAtlas

./: .gitignore  README.md  pyproject.toml
code/CA/: ca_analyses.py
code/GA/: ga_analyses.py
code/ID/: id_analyses.py
code/NC/: nc_analyses.py
code/NV/: nv_analyses.py
code/OR/: or_analyses.py
code/TX/: tx_analyses.py  tx_county_rates.py
code/UT/: ut_analyses.py
code/WA/: wa_analyses.py
code/all/: fig3tab1_MWtoFMV.py
data/CA/: PropTaxGenPropTaxLevies.csv  README.md  cnty_prop_tax_rates_ca_2025.csv
data/FL/: README.md  millage_taxes_levied.xlsx
data/GA/: Digest Export 4.6.26.xlsx  README.md  cnty_prop_tax_rates_ga_2025.csv  county_tot_levies_ga_2025.csv  ~$Digest Export 4.6.26.xlsx
data/ID/: EPB00129_12-04-2025.csv  README.md  cnty_prop_tax_rates_id_2025.csv
data/LA/: README.md
data/ME/: 2024 FULL VALUE TAX RATES HISTORY with percentage increases.xls  README.md
data/NC/: README.md  avg_proptax_rate_by_cnty_nc_2025_2026.csv
data/NV/: README.md  cnty_prop_tax_rates_nv_2025.csv
data/OR/: FY 2024-25 Property Tax Statistics Detail Tables.xlsx  README.md  cnty_prop_tax_rates_or_2025.csv
data/TX/: 2025-city-rates-levies.xlsx  2025-county-rates-levies.xlsx  2025-school-district-rates-levies.xlsx  2025-special-district-rates-levies.xlsx  2025-total-rates-levies.xlsx  README.md  cnty_prop_tax_rates_tx_2025.csv
data/UT/: README.md  avg_proptax_rate_by_cnty_ut_2025.csv  rates_ut_2025.csv
data/WA/: README.md  Table_27_2025.xlsx  cnty_prop_tax_rates_wa_2025.csv
data/all/: tab1_us_data_centers_FMV_samp.csv
images/all/: fig3_MWtoFMV.html
